unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/Opp_Open_Pipeline_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Opportunity Open Pipeline Snapshot</label>
    <nameField>
        <label>Opportunity - Open Pipeline Snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Open Pipeline Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>