unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Age_From_SQO__c.field-meta.xml
<CustomField>
    <fullName>Age_From_SQO__c</fullName>
    <formula>IF(
Sales_Qualified_Opportunity_S2__c,
IF(Closed__c,Close_Date__c - Sales_Qualified_At__c,Snapshot_Date__c-Sales_Qualified_At__c-1),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age From SQO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>