unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Auto_close_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_close_Date__c</fullName>
    <label>Auto-close: Date</label>
    <type>Date</type>
</CustomField>