unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Auto_close_Month__c.field-meta.xml
<CustomField>
    <fullName>Auto_close_Month__c</fullName>
    <formula>DATE(YEAR(Auto_close_Date__c),MONTH(Auto_close_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-close: Month</label>
    <type>Date</type>
</CustomField>