unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Booking_Month__c.field-meta.xml
<CustomField>
    <fullName>Booking_Month__c</fullName>
    <formula>DATE(YEAR(Booking_Date__c),MONTH(Booking_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Month</label>
    <type>Date</type>
</CustomField>