unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Booking_Week__c.field-meta.xml
<CustomField>
    <fullName>Booking_Week__c</fullName>
    <formula>CASE(MOD(Booking_Date__c - DATE(1900, 1, 6), 7),
0,Booking_Date__c + 0,
1,Booking_Date__c + 6,
2,Booking_Date__c + 5,
3,Booking_Date__c + 4,
4,Booking_Date__c + 3,
5,Booking_Date__c + 2,
6,Booking_Date__c + 1,
TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Week</label>
    <type>Date</type>
</CustomField>