unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Call_Type_AE_Month__c.field-meta.xml
<CustomField>
    <fullName>Call_Type_AE_Month__c</fullName>
    <description>Indicates whether the opportunity was included in the AE Month Forecast Call for the given snapshot week.</description>
    <inlineHelpText>Indicates whether the opportunity was included in the AE Month Forecast Call for the given snapshot week.</inlineHelpText>
    <label>zCall Type: AE (Month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>