unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Month__c</fullName>
    <formula>DATE(YEAR(Close_Date__c),MONTH(Close_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Month</label>
    <type>Date</type>
</CustomField>