unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Close_Week__c.field-meta.xml
<CustomField>
    <fullName>Close_Week__c</fullName>
    <formula>CASE(MOD(Close_Date__c - DATE(1900, 1, 6), 7),
0,Close_Date__c + 0,
1,Close_Date__c + 6,
2,Close_Date__c + 5,
3,Close_Date__c + 4,
4,Close_Date__c + 3,
5,Close_Date__c + 2,
6,Close_Date__c + 1,
TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Week</label>
    <type>Date</type>
</CustomField>