unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Created_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Month__c</fullName>
    <formula>DATE(
  YEAR(Created_Date__c),
  MONTH(Created_Date__c),
  1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Month</label>
    <type>Date</type>
</CustomField>