unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Expected_Forecast_Total_NRR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Forecast_Total_NRR__c</fullName>
    <label>Expected Forecast Total NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>