unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Expected_New_Annualized_Revenue_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Expected_New_Annualized_Revenue_Year_1__c</fullName>
    <label>Expected New Annualized Revenue (Year 1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>