unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Expected_New_MRR__c.field-meta.xml
<CustomField>
    <fullName>Expected_New_MRR__c</fullName>
    <label>Expected New MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>