unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/First_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign_Type__c</fullName>
    <label>First Campaign Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>