unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <label>Forecast Category+</label>
    <length>255</length>
    <type>Text</type>
</CustomField>