unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/HoS_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>HoS_Forecast_Category__c</fullName>
    <label>HoS Forecast Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forecast_Categories</valueSetName>
    </valueSet>
</CustomField>