unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/HoS_New_ARR_Override__c.field-meta.xml
<CustomField>
    <fullName>HoS_New_ARR_Override__c</fullName>
    <label>HoS New ARR Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>