unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Is_First_Snapshot_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Snapshot_of_Month__c</fullName>
    <formula>IF(DAY(Snapshot_Date__c) &lt;= 7,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the weekly snapshot is the first taken in the calendar month</inlineHelpText>
    <label>Is First Snapshot of Month?</label>
    <type>Checkbox</type>
</CustomField>