unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Is_First_Snapshot_of_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Snapshot_of_Quarter__c</fullName>
    <formula>IF(
 Is_First_Snapshot_of_Month__c &amp;&amp; (
  MONTH(Snapshot_Date__c) = 1 || 
  MONTH(Snapshot_Date__c) = 4 || 
  MONTH(Snapshot_Date__c) = 7 ||
  MONTH(Snapshot_Date__c) = 10
 ),
 TRUE,
 FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the snapshot is the first taken in the calendar quarter</inlineHelpText>
    <label>Is First Snapshot of Quarter?</label>
    <type>Checkbox</type>
</CustomField>