unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Is_Included_In_Forecast_Call__c.field-meta.xml
<CustomField>
    <fullName>Is_Included_In_Forecast_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the opportunity was included in the AE forecast call for the given snapshot week.</description>
    <label>zIs Included In Forecast Call?</label>
    <type>Checkbox</type>
</CustomField>