unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Is_Mature_SQO__c.field-meta.xml
<CustomField>
    <fullName>Is_Mature_SQO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mature SQO?</label>
    <type>Checkbox</type>
</CustomField>