unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Is_Stuck__c.field-meta.xml
<CustomField>
    <fullName>Is_Stuck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stuck?</label>
    <type>Checkbox</type>
</CustomField>