unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Category__c</fullName>
    <label>Lead Source Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>