unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Manager_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Full_Name__c</fullName>
    <label>Manager Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>