unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Most_Recent_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Campaign_Type__c</fullName>
    <label>Most Recent Campaign Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>