unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/New_AR_Manager_Override_Call__c.field-meta.xml
<CustomField>
    <fullName>New_AR_Manager_Override_Call__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Manager only field used in forecasting to override unweighted new annualized revenue amounts on opportunities.</description>
    <inlineHelpText>Manager only field used in forecasting to override unweighted new annualized revenue amounts on opportunities.</inlineHelpText>
    <label>zNew AR Manager Override: Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>