unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/New_AR_Y1_WoW_Change__c.field-meta.xml
<CustomField>
    <fullName>New_AR_Y1_WoW_Change__c</fullName>
    <formula>New_Annualized_Revenue_Year_1__c-Previous_Snapshot__r.New_Annualized_Revenue_Year_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New AR Y1 (WoW Change)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>