unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/New_ARR__c.field-meta.xml
<CustomField>
    <fullName>New_ARR__c</fullName>
    <label>New ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>