unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/New_ARR_Year_2__c.field-meta.xml
<CustomField>
    <fullName>New_ARR_Year_2__c</fullName>
    <label>New ARR (Year 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>