unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Opp_Movement__c.field-meta.xml
<CustomField>
    <fullName>Opp_Movement__c</fullName>
    <description>Reference the Previous Snapshot Booking Date. Returns the current Booking Date if no Previous Snapshot record is found.</description>
    <formula>IF(ISBLANK(Previous_Snapshot__c), Booking_Date__c, Previous_Snapshot__r.Booking_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Movement</label>
    <type>Date</type>
</CustomField>