unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Opportunity_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Segment__c</fullName>
    <label>Opportunity Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>