unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Open_Pipeline_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>