unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Owner_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_ID__c</fullName>
    <label>Owner Manager ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>