unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Previous_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Previous_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Snapshot</label>
    <referenceTo>Opp_Open_Pipeline_Snapshot__c</referenceTo>
    <relationshipLabel>Opportunity Open Pipeline Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Open_Pipeline_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>