unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Renewal_Baseline_MRR__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Baseline_MRR__c</fullName>
    <label>Renewal Baseline MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>