unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Renewal_Risk__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Risk__c</fullName>
    <label>Renewal Risk</label>
    <length>80</length>
    <type>Text</type>
</CustomField>