unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Renewal_Target_Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Target_Close_Month__c</fullName>
    <formula>DATE(YEAR(Renewal_Target_Close_Date__c),MONTH(Renewal_Target_Close_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Target Close Month</label>
    <type>Date</type>
</CustomField>