unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Rep_Attainment_Ignore__c.field-meta.xml
<CustomField>
    <fullName>Rep_Attainment_Ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rep Attainment: Ignore</label>
    <type>Checkbox</type>
</CustomField>