unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Sales_Qualification_Meeting_Set_At__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualification_Meeting_Set_At__c</fullName>
    <label>Sales Qualification Meeting Set At</label>
    <type>Date</type>
</CustomField>