unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Sales_Qualification_Meeting_Set_At_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualification_Meeting_Set_At_Month__c</fullName>
    <formula>DATE(YEAR(Sales_Qualification_Meeting_Set_At__c),MONTH(Sales_Qualification_Meeting_Set_At__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Qualification Meeting Set At Month</label>
    <type>Date</type>
</CustomField>