unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Sales_Qualified_At_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualified_At_Month__c</fullName>
    <formula>DATE(YEAR(Sales_Qualified_At__c),MONTH(Sales_Qualified_At__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Qualified At Month</label>
    <type>Date</type>
</CustomField>