unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Snapshot_Month__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Month__c</fullName>
    <formula>DATE(
  YEAR(Snapshot_Date__c),
  MONTH(Snapshot_Date__c),
  1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Month</label>
    <type>Date</type>
</CustomField>