unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Snapshot_Number_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Number_of_Month__c</fullName>
    <formula>IF(
  DAY(Snapshot_Date__c) &lt;= 7,1, 
  IF(
    DAY(Snapshot_Date__c) &lt;= 14,2,
    IF(
      DAY(Snapshot_Date__c) &lt;= 21,3,
      IF(
        DAY(Snapshot_Date__c) &lt;= 28,4,
        5
      )
     )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Number of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>