unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Snapshot_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Weekday__c</fullName>
    <formula>CASE(WEEKDAY(Snapshot_Date__c),
1,&quot;Sunday&quot;,
2,&quot;Monday&quot;,
3,&quot;Tuesday&quot;,
4,&quot;Wednesday&quot;,
5,&quot;Thursday&quot;,
6,&quot;Friday&quot;,
7,&quot;Saturday&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Weekday</label>
    <type>Text</type>
</CustomField>