unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Sourced_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Sourced_By_Role__c</fullName>
    <label>Sourced By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>