unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Total_ARR_Ending__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR_Ending__c</fullName>
    <label>Total ARR (Ending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>