unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Total_ARR_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR_Year_1__c</fullName>
    <label>Total ARR (Year 1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>