unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/fields/Total_ARR_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR_Year_2__c</fullName>
    <label>Total ARR (Year 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>