unpackaged/main/default/objects/Opp_Open_Pipeline_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_ID_case_safe__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Manager_Full_Name__c</columns>
    <columns>Owner_Role__c</columns>
    <columns>Opportunity_Segment__c</columns>
    <columns>Sourced_By__c</columns>
    <columns>Sourced_By_Role__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Name__c</field>
        <operation>contains</operation>
        <value>First Republic</value>
    </filters>
    <label>All Records</label>
</ListView>